[gd_scene load_steps=3 format=3 uid="uid://cxnqnwddgcwbs"]

[ext_resource type="Theme" uid="uid://cg8dikk6e4ojf" path="res://ui/ui_theme.tres" id="1_fyqef"]
[ext_resource type="Script" uid="uid://dl7jrcvbkvv1s" path="res://ui/ui.gd" id="1_m6e0p"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6e0p")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("1_fyqef")
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_fyqef")

[node name="ScoreA" type="RichTextLabel" parent="Container/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_fyqef")
text = "0"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_fyqef")

[node name="ScoreB" type="RichTextLabel" parent="Container/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_fyqef")
text = "0"
fit_content = true
autowrap_mode = 0

[node name="NewRoundTimerText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.515
anchor_top = 0.527
anchor_right = 0.515
anchor_bottom = 0.527
offset_left = -37.28
offset_top = -37.496
offset_right = 37.72
offset_bottom = 37.504
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fyqef")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
